--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
 <div class="user-details">
 <h2> My Experiences </h2>
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - August 2019</h2>
-<p style="text-align: justify;"> Your description </p>
+<p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Analytics </h3>
 	{% include clustrmap.html style="js" %}
