--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@ layout: home
 
 
 <div class="user-details">
-<h2> My Experiences </h2>
+<h2> My Experience </h2>
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - August 2019</h2>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn</a> or CV
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
-	<h3> Analytics </h3>
+	<h3> Visitor Data Analytics </h3>
 	{% include clustrmap.html style="js" %}
-	<p> <small> If you are not seeing a map, please disable Ad block </small></p>
+	<p> <small> If you are not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
 <div class="permlinks">
@@ -26,10 +27,11 @@ layout: home
 	<p>... <a href="/blog">Full Posts List</a> </p>
 </dl>
 
-<h2>Upcoming Posts (edit me at /index.html )</h2>
+<h2>Find Me on Social Media</h2>
 <ul>
-	<li>Post 1</li>
-	<li>Post 2</li>
+	<li>Leetcode</li>
+	<li><a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/">Zhihu<a></li>
+	<li>CSDN</li>
 </ul>
 
 </div >
