--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ layout: home
 
 <div class="user-details">
 <h2> My Experience </h2>
-	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - August 2019</h2>
+	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - September 2019</h2>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn</a> or CV
+	<h2>House Lead at TechX Academy, July - August 2019</h2>
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending.Researched and contacted course lecturers for the recruiting process 	
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn</a> or CV 
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analytics </h3>
 	{% include clustrmap.html style="js" %}
