--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 <p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. 	
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn</a> or CV 
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
-	<h3> Visitor Data Analytics </h3>
+	<h3> Visitor Data Analysis </h3>
 	{% include clustrmap.html style="js" %}
 	<p> <small> If you are not seeing a map, please disable the Ad block </small></p>
 </div>
