--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 	<h2>House Lead at TechX Academy,  July - August 2019</h2>
 <p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. 	
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or CV<embed src="https://my.github.io/Resume083019.pdf" type="application/pdf" />
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="vvvvvicabd.github.io/images/Resume083019.pdf" target="_blank">CV</a>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	{% include clustrmap.html style="js" %}
@@ -31,11 +31,10 @@ layout: home
 
 <h2>Find Me on Social Media</h2>
 <ul>
-	<li>Leetcode</li>
-	<li>Github:vvvvvicabd</li>
-	<li>Instagram:_itsvictoriax</li>
+	<li><a href=https://leetcode.com/vicccc/>Leetcode</a></li>
 	<li><a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/">Zhihu</a></li>
-	
+	<li>Github:vvvvvicabd</li>
+	<li>Instagram:_itsvictoriax</li>	
 </ul>
 
 </div >
