--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@ layout: home
 </div>
 </div>
 <div class="permlinks">
-<h2>Recent Posts</h2>
+<h2>Links and Photos</h2>
 <dl>
-	{% for post in site.posts limit:3 %}
-	<dt><code>{{ post.date | date_to_string }} </code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="{{ post.url }}">{{ post.title }}</a> &nbsp;{% include status-indicator.html status=post.status%}
-	{% if post.description %}
- <dd style="text-align: justify">{{ post.description | markdownify }}
-    </dd>
-	{% endif %}
+	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;{% include file-types-indicator.html types=file.types%}
+	
+ <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
+	
 	{% endfor %}
 	<p>... <a href="/blog">Full Posts List</a> </p>
 </dl>
