--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@ layout: home
 	<li>Github:vvvvvicabd</li>
 	<li>Instagram:_itsvictoriax</li>	
 </ul>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
+<body></body>
 
 </div >
