--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: home
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - September 2019</h2>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 	<h2>House Lead at TechX Academy,  July - August 2019</h2>
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. 	
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="vvvvvicabd.github.io/images/Resume083019.pdf" target="_blank">CV</a>
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process.</p> 	
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="vvvvvicabd.github.io/images/Resume083019.pdf" target="_blank">CV</a>(last updated on 09/03/19)</p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	{% include clustrmap.html style="js" %}
@@ -19,7 +19,7 @@ layout: home
 <div class="permlinks">
 <h2>Links and Photos</h2>
 <dl>
-	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;{% include file-types-indicator.html types=file.types%}
+	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;
 	
  <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
 	
