--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: home
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="vvvvvicabd.github.io/images/Resume083019.pdf" target="_blank">CV</a>(last updated on 09/03/19)</p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
-	{% include clustrmap.html style="js" %}
+	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
 	<p> <small> If you are not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
