New commits on the pageview widget

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: home
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
-	<p> <small> If you are not seeing a map, please disable the Ad block </small></p>
+	<p> <small> If not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
 <div class="permlinks">
