--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: home
 
 <h2>Find Me on Social Media</h2>
 <ul>
-	<li><a href=https://leetcode.com/vicccc/>Leetcode</a></li>
+	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
 	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
 	<li>Github:vvvvvicabd</li>
 	<li>Instagram:_itsvictoriax</li>
