--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@ layout: home
 <h2>Links and Photos</h2>
 <dl>
 	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;
-	
+	### embeded photos
+	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+	<div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+  	data-link="https://photos.app.goo.gl/xTLEFRnb4ZF4Q7ia6"
+  	data-title="New photo by Xinyi Xiang">
+  	<object data="https://lh3.googleusercontent.com/-onkzMT2fLfF1G6XkfnKPBA-AIXnd0OFX3Jbd0S_nfJ6qc_gCn9TwwdwHIj6f3zdt838K_LJ8sGuEwdE-rNZjVtp34vVvYVgb30Kk8x2LNV9JXeZY1G_jlO6X1lNMg1Cz2rNXax4cg=w1920-h1080"></object>
+	</div>
+
  <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
-	<p>... <a href="/blog">Full Posts List</a> </p>
+	
 </dl>
 
 <h2>Find Me on Social Media</h2>
@@ -30,7 +37,7 @@ layout: home
 	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
 	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
 	<li>Github:vvvvvicabd</li>
-	<li>Instagram:_itsvictoriax</li>
+	<li>Instagram:_itsvx</li>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 </ul>
