--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@ layout: home
 	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;
 	
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-	<div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
-  	data-link="https://photos.app.goo.gl/xTLEFRnb4ZF4Q7ia6"
-  	data-title="New photo by Xinyi Xiang">
-  	<object data="https://lh3.googleusercontent.com/-onkzMT2fLfF1G6XkfnKPBA-AIXnd0OFX3Jbd0S_nfJ6qc_gCn9TwwdwHIj6f3zdt838K_LJ8sGuEwdE-rNZjVtp34vVvYVgb30Kk8x2LNV9JXeZY1G_jlO6X1lNMg1Cz2rNXax4cg=w1920-h1080"></object>
-	</div>
+<div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
+  data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
+  data-title="3 new photos by Xinyi Xiang">
+  <object data="https://lh3.googleusercontent.com/r-e1K7W5gITBZWw5krri1_ANow1DULOnJ4UIa2XIjVxUDVIQSN0u1YOzv80wki8EpixH5p9Zu-dQKO6oj_y5dW7XatDkG66hLM26uL3dhLgQhRNoMLc1jxw9rXN751R5nBZr_knXtA=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
+</div>
+
 
  <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
 	
