--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: home
 	<h2>House Lead at TechX Academy,  July - August 2019</h2>
 <p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process.</p> 	
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or 
-<a href="https://docs.google.com/gview?url= https://github.com/vvvvvicabd/PersonalWebsiteXinyi/raw/master/Xiang%20Resume%20021220.pdf" target="_blank">CV</a>(last updated on 02/15/20)</p>
-	
+
+ <iframe src="https://docs.google.com/gview?url= https://github.com/vvvvvicabd/PersonalWebsiteXinyi/raw/master/Xiang%20Resume%20021220.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>	
 	
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
