--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ layout: home
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - September 2019</h2>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 	<h2>House Lead at TechX Academy,  July - August 2019</h2>
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process.</p> 	
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. Join TechX 2020 in Shanghai!<a href="https://www.techx.academy/"></a></p> 	
+	<h2>Mobile Development Club Vice President</h2>
+<p style="text-align: justify;">Assisted club members in Swift programming and WWDC project brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About"></a></p>    
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> 
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or 
 <a href="https://docs.google.com/gview?url=https://github.com/vvvvvicabd/PersonalWebsiteXinyi/raw/master/Xiang%20Resume%20021220.pdf" target="_blank">CV</a>(last updated on 02/15/20)</p>	
 	
@@ -18,11 +21,12 @@ layout: home
 	<p> <small> If not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
+
 <div class="permlinks">
 <h2>Links and Photos</h2>
 <dl>
 	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;
-	
+		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks photos</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 <div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
   data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
@@ -46,6 +50,14 @@ layout: home
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 </ul>
-
+	
+<h2>Honors</h2>
+<ul>
+	<li>2019 UW Dubhacks Finalist and Classic Tracks Top3</li>
+	<li>AP Scholar with Distinction Award</li>
+	<li>Third Place in China Division at the Purple Comet Math Contest</li>
+	<li>Washington and Lee University Alumni Book Award</li>
+	
+	
 
 </div >
