--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@ layout: home
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang, June - September 2019</h2>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 	<h2>House Lead at TechX Academy,  July - August 2019</h2>
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. Join TechX 2020 in Shanghai!<a href="https://www.techx.academy/"></a></p> 	
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. <a href="https://www.techx.academy/">Join TechX 2020 in Shanghai!</a></p> 	
 	<h2>Mobile Development Club Vice President</h2>
-<p style="text-align: justify;">Assisted club members in Swift programming and WWDC project brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About"></a></p>    
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> 
+<p style="text-align: justify;">Assisted club members in Swift programming and WWDC project brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p>    
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or 
 <a href="https://docs.google.com/gview?url=https://github.com/vvvvvicabd/PersonalWebsiteXinyi/raw/master/Xiang%20Resume%20021220.pdf" target="_blank">CV</a>(last updated on 02/15/20)</p>	
 	
