--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ layout: home
 	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
 	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
 	<li>Github:vvvvvicabd</li>
-	<li>Instagram:_itsvx</li>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 </ul>
@@ -53,10 +52,9 @@ layout: home
 <h2>Honors</h2>
 <ul>
 	<li>2019 UW Dubhacks Finalist and Classic Tracks Top3</li>
+	<li>Microsoft Imagine Cup Regional SemiFinalist</li>
 	<li>AP Scholar with Distinction Award</li>
 	<li>Third Place in China Division at the Purple Comet Math Contest</li>
 	<li>Washington and Lee University Alumni Book Award</li>
-	
-	
 
 </div >
