--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: home
 <ul>
 	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
 	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
-	<li>Github:vvvvvicabd</li>
+	<li>Github:xinyixiang</li>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 </ul>
