--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ layout: home
 </div>
 
 <div class="permlinks">
-<h2>Links and Photos</h2>
+<h2>Projects and Photos</h2>
 <dl>
-	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">School Reports on the Calendar App</a> &nbsp;
+	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
 		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks photos</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 <div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
