--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@ layout: home
 
 
 <div class="user-details">
-<h2> My Experience </h2>
+<h2> About me </h2>
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
 	<p align="center">
 		June - September 2019
 	</p>
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
-	<h2>House Lead at TechX Academy,  July - August 2019</h2>
+	<h2>House Lead at TechX Academy</h2>
+	<p align="center">
+		July - August 2019
+	</p>
 <p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. <a href="https://www.techx.academy/">Join TechX 2020 in Shanghai!</a></p> 	
 	<h2>Mobile Development Club Vice President</h2>
+	<p align="center">
+		July - August 2019
+	</p>
 <p style="text-align: justify;">Assisted club members in Swift programming and WWDC project brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p>    
 <p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or 
 <a href="https://docs.google.com/gview?url=https://github.com/vvvvvicabd/PersonalWebsiteXinyi/raw/master/Xiang%20Resume%20021220.pdf" target="_blank">CV</a>(last updated on 02/15/20)</p>	
@@ -25,11 +31,18 @@ layout: home
 </div>
 
 <div class="permlinks">
-<h2>Projects and Photos</h2>
+<h2>Projects</h2>
 <dl>
 	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
 		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks photos</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+
+
+ <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
+	
+</dl>
+
+<h2>Cheers to my photographer friends</h2>
 <div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
   data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
   data-title="3 new photos by Xinyi Xiang">
@@ -37,11 +50,6 @@ layout: home
   <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
   <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
 </div>
-
-
- <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
-	
-</dl>
 
 <h2>Find Me on Social Media</h2>
 <ul>
