--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: home
 	
 </dl>
 
-<h2>Cheers to my photographer friends</h2>
+<h2>Cheers to My Photographer Friends</h2>
 <div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
   data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
   data-title="3 new photos by Xinyi Xiang">
