--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 
 
 <div class="user-details">
-<h2> About me </h2>
+<h2>  About me </h2>
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
 	<p align="center">
 		June - September 2019
@@ -20,7 +20,7 @@ layout: home
 		July - August 2019
 	</p>
 <p style="text-align: justify;">Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p>    
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="images/Resume083019.pdf" target="_blank">CV</a>(last updated on 09/03/19)</p>
+<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="images/Xiang Resume 091920.pdf" target="_blank">Resume</a>(last updated on 09/03/19)</p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
