--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: home
 	<p align="center">
 		July - August 2019
 	</p>
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. <a href="https://www.techx.academy/">Join TechX 2020 in Shanghai!</a></p> 	
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. <a href="https://www.techx.academy/">TechX in Shanghai</a></p> 	
 	<h2>Mobile Development Club Vice President</h2>
 	<p align="center">
 		July - August 2019
