--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-
+<!--Past Experience-->
 <div class="user-details">
 <h2>  About me </h2>
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
@@ -27,19 +27,20 @@ layout: home
 	<p> <small> If not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
-
+<!--Projects Sorted by Years -->
 <div class="permlinks">
 <h2>Projects</h2>
 <dl>
-	<dt><code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
-		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks photos</a> &nbsp;
+	<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
+		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;
+		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 
 
  <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
 	
 </dl>
-
+<!--Photos-->
 <h2>Cheers to My Photographer Friends</h2>
 <div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
   data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
@@ -53,7 +54,7 @@ layout: home
 <ul>
 	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
 	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
-	<li>GitHub:vvvvvicabd</li>
+	
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
