--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: home
 <dl>
 	<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
 		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;
-		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
+		<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 
 
@@ -50,10 +50,11 @@ layout: home
   <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
 </div>
 
-<h2>Find Me on Social Media</h2>
+<h2>Find Me on These Platforms</h2>
 <ul>
-	<li><a href=www.linkedin.com/in/xinyi-xiang-285b1a14a>LinkedIn Page</a></li>
-	<li><a href="https://www.zhihu.com/people/15763730370/activities">Zhihu</a></li>
+	<i class="ri-mastodon-line" href=https://m.cmx.im/invite/StYQneRa>Mastodon</i>
+	<i class="ri-linkedin-box-line" href="https://www.linkedin.com/in/xinyi-xiang">LinkedIn</i>
+	<i class="ri-zhihu-fill" href=https://www.zhihu.com/people/15763730370/activities>Zhihu</i>
 	
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
@@ -62,9 +63,9 @@ layout: home
 	
 <h2>Honors</h2>
 <ul>
-	<li>2019 UW Dubhacks Finalist and Classic Tracks Top3</li>
-	<li>Microsoft Imagine Cup Regional SemiFinalist</li>
-	<li>AP Scholar with Distinction Award</li>
+	<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
+	<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
+	<li>AP Scholar with Distinction</li>
 	<li>Third Place in China Division at the Purple Comet Math Contest</li>
 	<li>Washington and Lee University Alumni Book Award</li>
 
