--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
 		July - August 2019
 	</p>
 <p style="text-align: justify;">Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p>    
-<p>For more details, see<a href="https://www.linkedin.com/in/xinyi-xiang-285b1a14a/"> Xinyi's LinkedIn Page</a> or <a href="images/Resume091920.pdf" target="_blank">Resume</a>(last updated on 09/03/19)</p>
+<p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/03/19)</p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
@@ -32,7 +32,7 @@ layout: home
 <h2>Projects</h2>
 <dl>
 	<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
-		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;
+		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
 		<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 
@@ -52,9 +52,9 @@ layout: home
 
 <h2>Find Me on These Platforms</h2>
 <ul>
-	<i class="ri-mastodon-line" href=https://m.cmx.im/invite/StYQneRa>Mastodon</i>
-	<i class="ri-linkedin-box-line" href="https://www.linkedin.com/in/xinyi-xiang">LinkedIn</i>
-	<i class="ri-zhihu-fill" href=https://www.zhihu.com/people/15763730370/activities>Zhihu</i>
+	<i class="ri-mastodon-line"></i><a href=https://m.cmx.im/invite/StYQneRa></a>
+	<i class="ri-linkedin-box-line" href="https://www.linkedin.com/in/xinyi-xiang"></i>
+	<i class="ri-zhihu-fill" href=https://www.zhihu.com/people/15763730370/activities></i>
 	
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
