--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ layout: home
 <h2>Find Me on These Platforms</h2>
 
 	<i class="ri-mastodon-line"></i><a href=https://m.cmx.im/invite/StYQneRa></a>
-	<i class="ri-linkedin-box-line" href="https://www.linkedin.com/in/xinyi-xiang"></i>
-	<i class="ri-zhihu-fill" href=https://www.zhihu.com/people/15763730370/activities></i>
+	<i class="ri-linkedin-box-line"></i><a href="https://www.linkedin.com/in/xinyi-xiang"></a>
+	<i class="ri-zhihu-fill"></i><a href=https://www.zhihu.com/people/15763730370/activities></a>
 	
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
