--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@ layout: home
 	<p align="center">
 		July - August 2019
 	</p>
-<p style="text-align: justify;">Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p>    
-<p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/03/19)</p>
+<p style="text-align: justify;">
+	Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack 
+	day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p> 
+	
+<p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/19/20)</p>
+<!--Visitor Data Analysis-->	
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
 	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
@@ -31,41 +35,37 @@ layout: home
 <div class="permlinks">
 <h2>Projects</h2>
 <dl>
-	<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
-		<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
-		<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
-	<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-
-
- <dd style="text-align: justify">{{ post.description | markdownify }}</dd>
-	
+		<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
+			<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
+			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
+		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+	<dd style="text-align: justify">{{ post.description | markdownify }}</dd>	
 </dl>
 <!--Photos-->
 <h2>Cheers to My Photographer Friends</h2>
-<div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
-  data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
-  data-title="3 new photos by Xinyi Xiang">
-  <object data="https://lh3.googleusercontent.com/r-e1K7W5gITBZWw5krri1_ANow1DULOnJ4UIa2XIjVxUDVIQSN0u1YOzv80wki8EpixH5p9Zu-dQKO6oj_y5dW7XatDkG66hLM26uL3dhLgQhRNoMLc1jxw9rXN751R5nBZr_knXtA=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
-</div>
+	<div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
+	  data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
+	  data-title="3 new photos by Xinyi Xiang">
+	  <object data="https://lh3.googleusercontent.com/r-e1K7W5gITBZWw5krri1_ANow1DULOnJ4UIa2XIjVxUDVIQSN0u1YOzv80wki8EpixH5p9Zu-dQKO6oj_y5dW7XatDkG66hLM26uL3dhLgQhRNoMLc1jxw9rXN751R5nBZr_knXtA=w1920-h1080"></object>
+	  <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
+	  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
+	</div>
 
 <h2>Find Me on These Platforms</h2>
-
+<!--Remix Icon-->
 	<i class="ri-mastodon-line"></i><a href=https://m.cmx.im/invite/StYQneRa></a>
 	<i class="ri-linkedin-box-line"></i><a href="https://www.linkedin.com/in/xinyi-xiang"></a>
 	<i class="ri-zhihu-fill"></i><a href=https://www.zhihu.com/people/15763730370/activities></a>
-	
-	
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
+		
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script> -->
 <body></body>
 	
 <h2>Honors</h2>
-<ul>
-	<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
-	<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
-	<li>AP Scholar with Distinction</li>
-	<li>Third Place in China Division at the Purple Comet Math Contest</li>
-	<li>Washington and Lee University Alumni Book Award</li>
-
+	<ul>
+		<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
+		<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
+		<li>AP Scholar with Distinction</li>
+		<li>Third Place in China Division at the Purple Comet Math Contest</li>
+		<li>Washington and Lee University Alumni Book Award</li>
+	</ul>
 </div >
