--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@ layout: home
 	<p align="center">
 		June - September 2019
 	</p>
-<p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
+	
+<p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN 
+	with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression 
+	Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
 	<h2>House Lead at TechX Academy</h2>
 	<p align="center">
 		July - August 2019
 	</p>
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting process. <a href="https://www.techx.academy/">TechX in Shanghai</a></p> 	
+	
+<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging 
+	from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting 
+	process. 
+	<a href="https://www.techx.academy/">TechX in Shanghai</a></p> 	
 	<h2>Mobile Development Club Vice President</h2>
 	<p align="center">
-		July - August 2019
+		August 2019 - Present
 	</p>
+	
 <p style="text-align: justify;">
 	Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack 
-	day hackathon event.Please check out our club website. <a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p> 
+	day hackathon event.Please check out our club website. 
+	<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p> 
 	
 <p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/19/20)</p>
 <!--Visitor Data Analysis-->	
