--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ layout: home
 	</div>
 
 <h2>Find Me on These Platforms</h2>
-<!--Remix Icon-->
-	<i class="ri-mastodon-line"></i><a href=https://m.cmx.im/invite/StYQneRa></a>
-	<i class="ri-linkedin-box-line"></i><a href="https://www.linkedin.com/in/xinyi-xiang"></a>
-	<i class="ri-zhihu-fill"></i><a href=https://www.zhihu.com/people/15763730370/activities></a>
-		
+<!--Icons from Remix Icon-->
+	<i class="ri-mastodon-line"></i>
+	<i class="ri-linkedin-box-line"></i>
+	<i class="ri-zhihu-fill"></i>
+	
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script> -->
 <body></body>
 	
