--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 ---
-
+<head><link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"></head>
 <!--Past Experience-->
 <div class="user-details">
 <h2>  About me </h2>
