--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@ layout: home
 
 <h2>Find Me on These Platforms</h2>
 <!--Icons from Remix Icon-->
-	<i class="ri-mastodon-line"></i>
-	<i class="ri-linkedin-box-line"></i>
-	<i class="ri-zhihu-fill"></i>
+	<a href="https://www.linkedin.com/in/xinyi-xiang">
+		<img height="32" width="32" src="Icons/linkedin-box-line.png" />
+	</a>
 	
+	<a href="https://m.cmx.im/invite/StYQneRa">
+		<img height="32" width="32" src="Icons/mastodon-line.png" />
+	</a>
+	
+	<a href="https://www.zhihu.com/people/15763730370/activities">
+	<img height="32" width="32" src="Icons/zhihu-fill.png" />
+	</a>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script> -->
 <body></body>
 	
