--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: home
 	<a href="https://www.zhihu.com/people/15763730370/activities">
 	<img height="32" width="32" src="Icons/zhihu-fill.png" />
 	</a>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 	
 <h2>Honors</h2>
