--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ layout: home
 <!--Past Experience-->
 <div class="user-details">
 <h2>  About me </h2>
+<!--DSC-->	
+	<h2>Google Developer Student Clubs Lead</h2>
+	<p align="center">
+		August 2020 - Present
+	</p>
+	
+<p style="text-align: justify;"> Hosted virtual events with Google developers dedicated to forge a welcoming developer community learn and connect.
+	Check out our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a>.</p>
+	
+<!--Algorithm Engineer Intern at Tsinghua Tongfang-->	
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
 	<p align="center">
 		June - September 2019
@@ -13,6 +23,7 @@ layout: home
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN 
 	with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression 
 	Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
+<!--House Lead at TechX Academy-->		
 	<h2>House Lead at TechX Academy</h2>
 	<p align="center">
 		July - August 2019
@@ -21,7 +32,8 @@ layout: home
 <p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging 
 	from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting 
 	process. 
-	<a href="https://www.techx.academy/">TechX in Shanghai</a></p> 	
+	<a href="https://www.techx.academy/">TechX in Shanghai</a></p> 
+<!--Mobile Development Club Vice President-->	
 	<h2>Mobile Development Club Vice President</h2>
 	<p align="center">
 		August 2019 - Present
@@ -31,6 +43,8 @@ layout: home
 	Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack 
 	day hackathon event.Please check out our club website. 
 	<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p> 
+	
+	
 	
 <p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/19/20)</p>
 <!--Visitor Data Analysis-->	
@@ -47,6 +61,7 @@ layout: home
 		<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
 			<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
+			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 	<dd style="text-align: justify">{{ post.description | markdownify }}</dd>	
 </dl>
