--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ layout: home
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
 	
+	
+	
+<!--Honors-->	
 <h2>Honors</h2>
 	<ul>
 		<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
