Improve space usage for content

--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 layout: home
 ---
 
-<!--Past Experience-->
+<!--Experience Highlighting-->
 <div class="user-details">
 <h2>  About me </h2>
+<!--UW Undergrad RA-->		
+	<h2>UW Undergrad Research Assistant</h2>
+	<p align="center">
+		10/2020 - Present
+	</p>
+	
+<p style="text-align: justify;">
+	<ul>Design algorithms for natural language topic modelling in bilingual corpora</ul>
+	<ul>Approach statistically on cognition reflective psycholinguistic pragmatics</ul>
+	<ul>Collaborate with colleagues from UW Allen School of Computer Science</ul>
+</p>
+
 <!--DSC-->	
 	<h2>Google Developer Student Clubs Lead</h2>
 	<p align="center">
-		August 2020 - Present
+		08/2020 - Present
 	</p>
 	
 <p style="text-align: justify;"> Hosted virtual events with Google developers dedicated to forge a welcoming developer community learn and connect.
@@ -17,22 +29,13 @@ layout: home
 <!--Algorithm Engineer Intern at Tsinghua Tongfang-->	
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
 	<p align="center">
-		June - September 2019
+		06/2019 - 09/2019
 	</p>
 	
 <p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN 
 	with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression 
 	Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
-<!--House Lead at TechX Academy-->		
-	<h2>House Lead at TechX Academy</h2>
-	<p align="center">
-		July - August 2019
-	</p>
-	
-<p style="text-align: justify;">Tutored students on probability theories, common statistical models. Organized and coordinated house activities ranging 
-	from intellectual competitions to physical races, calculated and budgeted the spending. Researched and contacted course lecturers for the recruiting 
-	process. 
-	<a href="https://www.techx.academy/">TechX in Shanghai</a></p> 
+
 <!--Mobile Development Club Vice President-->	
 	<h2>Mobile Development Club Vice President</h2>
 	<p align="center">
@@ -46,7 +49,8 @@ layout: home
 	
 	
 	
-<p>For more details, see <a href="images/Resume091920.pdf" target="_blank">Xinyi's Resume</a>(last updated on 09/19/20)</p>
+<p>For more details, see <a href="images/Xiang Curriculum Vitae.pdf" target="_blank">Xinyi's curriculum Vitae</a>(last updated on 04/15/21)</p>
+
 <!--Visitor Data Analysis-->	
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visitor Data Analysis </h3>
@@ -54,6 +58,7 @@ layout: home
 	<p> <small> If not seeing a map, please disable the Ad block </small></p>
 </div>
 </div>
+
 <!--Projects Sorted by Years -->
 <div class="permlinks">
 <h2>Projects</h2>
@@ -65,7 +70,8 @@ layout: home
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 	<dd style="text-align: justify">{{ post.description | markdownify }}</dd>	
 </dl>
-<!--Photos-->
+	
+<!--Photos
 <h2>Cheers to My Photographer Friends</h2>
 	<div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
 	  data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
@@ -73,7 +79,7 @@ layout: home
 	  <object data="https://lh3.googleusercontent.com/r-e1K7W5gITBZWw5krri1_ANow1DULOnJ4UIa2XIjVxUDVIQSN0u1YOzv80wki8EpixH5p9Zu-dQKO6oj_y5dW7XatDkG66hLM26uL3dhLgQhRNoMLc1jxw9rXN751R5nBZr_knXtA=w1920-h1080"></object>
 	  <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
 	  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
-	</div>
+	</div>-->
 
 <h2>Find Me on These Platforms</h2>
 <!--Icons from Remix Icon-->
@@ -90,16 +96,15 @@ layout: home
 	</a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
 <body></body>
-	
-	
+		
 	
 <!--Honors-->	
 <h2>Honors</h2>
 	<ul>
+		<li>Stanford Biodesign Best App</li>
 		<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
 		<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
 		<li>AP Scholar with Distinction</li>
-		<li>Third Place in China Division at the Purple Comet Math Contest</li>
 		<li>Washington and Lee University Alumni Book Award</li>
 	</ul>
 </div >
