--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 
 <!--Experience Highlighting-->
 <div class="user-details">
-<h2>  About me </h2>
+<h2> Experience Highlight </h2>
 <!--UW Undergrad RA-->		
 	<h2>UW Undergrad Research Assistant</h2>
 	<p align="center">
@@ -98,8 +98,8 @@ layout: home
 <body></body>
 		
 	
-<!--Honors-->	
-<h2>Honors</h2>
+<!--Awards-->	
+<h2>Awards</h2>
 	<ul>
 		<li>Stanford Biodesign Best App</li>
 		<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
